Prevent tree-leaf markup to not collapse leafs when a leaf has no content

--- a/src/views/tree/tree-leaf.css
+++ b/src/views/tree/tree-leaf.css
@@ -80,6 +80,13 @@
     grid-area: content;
     display: inline-block;
 }
+.view-tree-leaf-content::before {
+    content: '\200B';
+}
+.view-tree-leaf-content:empty::before {
+    content: '<empty>';
+    color: #888;
+}
 
 .view-tree-leaf-children {
     grid-area: children;
